<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fieldworker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_showPosts">Show Posts</string>
    <string name="action_addUser">Add User</string>
    <string name="action_addPost">Add New Post</string>
    <string name="action_viewProfile">View profile</string>
    <string name="action_logout">Logout</string>
    <string name="action_showUsers">Show users</string>
    <string name="pref_file">FWData</string>
    <string name="notLogged">NA</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="no_net_title">No internet connection</string>
    <string name="no_net_msg">You need a network connection to use this application. Please turn on mobile network or Wi-Fi</string>
    <string name="domain">https://fworker.firebaseio.com/</string>

</resources>
