<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_showPosts" android:title="@string/action_showPosts"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_addPost" android:title="@string/action_addPost"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_viewProfile" android:title="@string/action_viewProfile"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_addUser" android:title="@string/action_addUser"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_showUsers" android:title="@string/action_showUsers"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_logout" android:title="@string/action_logout"
        android:orderInCategory="100" android:showAsAction="never" />


</menu>